Upgrade CheerpX 1.3.2, switch back to x64 JRE with jlink (1.2.8 had no 64-bit support)